<resources>
    <string name="app_name" translatable="false">SpeedBall</string>
    
    <string name="main_start">Старт</string>
    <string name="main_calculate_distance">Отмерить дистанцию</string>

    <string name="alert_title">Внимание!</string>
    <string name="alert_message">Для вычисления скорости удара необходимы разрешения на "Камеру", "Звука" и "Записи"</string>
    <string name="alert_ok">Ок</string>
    <string name="ball_speed">Скорость мяча</string>

    <string name="close">Закрыть</string>
    <string name="share">Поделиться</string>
    <string name="measure_ball_speed">Измерьте скорость мяча</string>
    <string name="instruction">Инструкция</string>
    <string name="main_tip_1">1 - Измерьте \nдистанцию (10 м.)</string>
    <string name="main_tip_2">2 - Ударьте</string>
    <string name="cancel">Отмена</string>
    <string name="settings">Настройки</string>
    <string name="sensitive_microphone">Чувствительность микрофона</string>
    <string name="measurement">Единица измерения</string>
    <string name="save">Сохранить</string>

    <string name="km_h">км/ч</string>
    <string name="mile_h">миль/ч</string>
    <string name="empty_data">Нету данных</string>
    <string name="gps_coordinate">Получение точных координатов GPS</string>
    <string name="alert_message_gps">Для измерении дистанции необходимы разрешения GPS</string>
    <string name="start_and_move">Нажмите на кнопку Старт и пройдите прямо 10 метров</string>
    <string name="move">Пройдите прямо 10 метров</string>

    <string name="admob_id_release" translatable="false">ca-app-pub-5203994867346463/9404883706</string>
    <string name="admob_id_debug" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="percent" translatable="false">%1$s, %</string>
    <string name="zero_meters" translatable="false">0,00 M.</string>
    <string name="database" translatable="false">SpeedBall.db</string>

    <string name="sucks">Отстой</string>
    <string name="fine">Нормально</string>
    <string name="nice">Красава</string>
    <string name="fire">Огонь</string>
    <string name="gun">Пушка</string>
    <string name="bullet">Пуля!</string>
</resources>
