<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:gravity="center"
            android:text="@string/start_and_move"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />


        <TextView
            android:id="@+id/tvMeters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/zero_meters"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:theme="@style/AppTheme.WhiteAccent" />

        <TextView
            android:id="@+id/gpsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/gps_coordinate"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStartClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/ic_button_distance"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingStart="16dp"
            android:paddingEnd="32dp"
            android:enabled="false"
            android:text="@string/main_start"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>
</layout>
