<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutResult"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_128sdp"
        android:background="@color/colorBlackTransparency">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/ic_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSpeedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/ball_speed"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvSpeedCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvSpeedTitle"
            app:layout_constraintTop_toBottomOf="@id/tvSpeedTitle"
            tools:text="72,83" />

        <TextView
            android:id="@+id/tvSpeedParameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:gravity="bottom"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@id/tvSpeedCount"
            app:layout_constraintStart_toEndOf="@id/tvSpeedCount"
            app:layout_constraintTop_toBottomOf="@id/tvSpeedTitle"
            tools:ignore="SmallSp"
            tools:text="km/h" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:text="Красава"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClose"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:background="@drawable/ic_button_start"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/space"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnShare"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@drawable/ic_button_distance"
            android:drawableStart="@drawable/ic_share"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/space"
            app:layout_constraintEnd_toEndOf="parent" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_34sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
